--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvKpPuTzVSV8dsjI9a8tHm",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPOBjvS6W7JVWaKXOGcAwY9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,30 +35,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LYcQdtJ89ucr",
-        "outputId": "36b350ac-19b3-4e8a-a4e9-2165500ce6b4"
+        "outputId": "5fdb9e8d-5964-4985-dd0e-301064f74167"
       },
       "source": [
-        "maxparticipants = int(input(\"Enter total no of Tickets available\"))\n",
         "import random\n",
+        "maxparticipants = int(input(\"Enter total no of Tickets available\"))\n",
         "n=[]\n",
         "for i in range(maxparticipants):\n",
-        "    n=input(\"Enter name of participants:\")\n",
-        "a=(random.randint(0,maxparticipants-1))\n",
-        "print('The winner is: ',n)\n"
+        "    bn=input(\"Enter name of participants:\")\n",
+        "    n.append(bn)\n",
+        "print(\"All participants are \",n)\n",
+        "a= random.randint(0,maxparticipants-1)\n",
+        "print('The winner is: ',n[a])\n"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter total no of Tickets available6\n",
-            "Enter name of participants:sai\n",
-            "Enter name of participants:ram\n",
-            "Enter name of participants:dev\n",
-            "Enter name of participants:indra\n",
-            "Enter name of participants:god\n",
-            "Enter name of participants:lord\n",
-            "The winner is:  lord\n"
+            "Enter total no of Tickets available5\n",
+            "Enter name of participants:a\n",
+            "Enter name of participants:d\n",
+            "Enter name of participants:s\n",
+            "Enter name of participants:e\n",
+            "Enter name of participants:g\n",
+            "All participants are  ['a', 'd', 's', 'e', 'g']\n",
+            "The winner is:  e\n"
           ],
           "name": "stdout"
         }
